--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^2.23.1",
     "react-query-devtools": "^2.6.0",
     "react-scripts": "3.4.3",
+    "react-table": "^7.5.2",
     "rebass": "^4.0.7",
     "typescript": "~3.7.2"
   },
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-table": "^7.0.24"
   }
 }
